fixed order summery text wraping

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -157,6 +157,8 @@ ul {
 	vertical-align: top;
 	margin-top: 62px;
 	height: 500px;
+	overflow: auto;
+	white-space: nowrap;
 }
 
 .order-summary div {
